<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dentalapp.dentalapp.LoginActivity"
    android:orientation="horizontal">



    <!-- ************************************************************************************    -->

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".15"></RelativeLayout>

    <ProgressBar android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_weight=".7"/>

    <ScrollView android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".7"
        android:paddingTop="20sp">

            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <TextView android:text="@string/email_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/usernameEditText"
                    android:layout_weight="1"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:text="@string/enter"
                    android:id="@+id/loginButton"
                    android:layout_gravity="center_horizontal"
                    style="?android:textAppearanceSmall"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/roundedcornersgreen"/>
            </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".15"></RelativeLayout>

</LinearLayout>
