<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dentalapp.dentalapp.WelcomeActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:id="@+id/welcomeLogoIV"
            android:src="@drawable/logo_dentalapp"
            android:layout_gravity="center_vertical"
             />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:id="@+id/imageView4"
            android:src="@drawable/dentalappv11"
            android:layout_gravity="center_vertical"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome"
            android:id="@+id/textView3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_subtitle"
            android:id="@+id/welcomeMessageTextView"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:text="@string/com_facebook_loginview_log_in_button"
            android:id="@+id/fbLoginButton"
            android:background="@drawable/roundedcorners"
            android:drawableLeft="@drawable/facebook"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:text="@string/email_login"
            android:id="@+id/emailLoginButton"
            android:background="@drawable/roundedcorners"
            android:drawableLeft="@drawable/mail"/>
     </LinearLayout>

</LinearLayout>
